assets/css/main.css
/* ... */
body.is-menu-visible #wrapper {
	pointer-events: none;
	cursor: default;
	opacity: 0.25;
}

body.is-menu-visible #menu {
	-moz-transform: translateX(0);
	-webkit-transform: translateX(0);
	-ms-transform: translateX(0);
	transform: translateX(0);
	visibility: visible;
}

body.is-menu-visible #menu>* {
	opacity: 1;
}

body.is-menu-visible #menu .close {
	-moz-transform: scale(1.0) rotate(0deg);
	-webkit-transform: scale(1.0) rotate(0deg);
	-ms-transform: scale(1.0) rotate(0deg);
	transform: scale(1.0) rotate(0deg);
	opacity: 1;
}

/* Main */

#main {
	padding: 0em 0 0em 0;
}

#home-main {
	padding: 10em 10em 10em;
}

/* Footer */

#footer {
	padding: 3%;
	background-color: #828C7D;
	margin-top: auto;
}

#footer>.inner {
	display: -moz-flex;
	display: -webkit-flex;
	display: -ms-flex;
	display: flex;
	-moz-flex-wrap: wrap;
	-webkit-flex-wrap: wrap;
	-ms-flex-wrap: wrap;
	flex-wrap: wrap;
	-moz-flex-direction: row;
	-webkit-flex-direction: row;
	-ms-flex-direction: row;
	flex-direction: row;
}

#footer>.inner>*> :last-child {
	margin-bottom: 0;
}

#footer>.inner section:nth-child(1) {
	width: calc(66% - 2.5em);
	margin-right: 2.5em;
}

#footer>.inner section:nth-child(2) {
	width: calc(33% - 2.5em);
	margin-left: 2.5em;
}

#footer>.inner .copyright {
	width: 100%;
	padding: 1%;
	list-style: none;
	font-size: 0.8em;
	color: #262626;
}

#footer>.inner .copyright a {
	color: inherit;
}

#footer>.inner .copyright li {
	display: inline-block;
	border-left: solid 1px rgba(88, 88, 88, 0.15);
	line-height: 1;
	padding: 0 0 0 1em;
	margin: 0 0 0 1em;
}

#footer>.inner .copyright li:first-child {
	border-left: 0;
	padding-left: 0;
	margin-left: 0;
}

@media screen and (max-width: 1280px) {

	#footer>.inner section:nth-child(1) {
		width: calc(66% - 1.25em);
		margin-right: 1.25em;
	}

	#footer>.inner section:nth-child(2) {
		width: calc(33% - 1.25em);
		margin-left: 1.25em;
	}

}

@media screen and (max-width: 980px) {

	#footer>.inner section:nth-child(1) {
		width: 66%;
		margin-right: 0;
	}

	#footer>.inner section:nth-child(2) {
		width: calc(33% - 2.5em);
		margin-left: 2.5em;
	}

}

@media screen and (max-width: 736px) {

	#footer {
		padding: 3em 0 1em 0;
	}

	#footer>.inner {
		-moz-flex-direction: column;
		-webkit-flex-direction: column;
		-ms-flex-direction: column;
		flex-direction: column;
	}

	#footer>.inner section:nth-child(1) {
		width: 100%;
		margin-right: 0;
		margin: 3em 0 0 0;
	}

	#footer>.inner section:nth-child(2) {
		-moz-order: -1;
		-webkit-order: -1;
		-ms-order: -1;
		order: -1;
		width: 100%;
		margin-left: 0;
	}

	#footer>.inner .copyright {
		margin-top: 3em;
	}

}

@media screen and (max-width: 480px) {

	#footer>.inner .copyright {
		margin-top: 3em;
	}

	#footer>.inner .copyright li {
		border-left: 0;
		padding-left: 0;
		margin: 0.75em 0 0 0;
		display: block;
		line-height: inherit;
	}

	#footer>.inner .copyright li:first-child {
		margin-top: 0;
	}

}

/* Wrapper */

#wrapper>*>.inner {
	padding: 0 2.5em;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
}


@media screen and (max-width: 736px) {

	#wrapper>*>.inner {
		padding: 0 1.25em;
	}

}

.top-bio-p {
	margin-bottom: 3% !important
}

input::placeholder {
	color: #262626;
}

textarea::placeholder {
	color: #262626;
}

